# openbb-guru

./: .gitignore  README.md  pyproject.toml
examples/: test.ipynb
openbb_guru/: openbb.py  provider.py  router.py
openbb_guru/models/: house_disclosure.py  house_disclosure_rss_feed.py  senate_trading.py  senate_trading_rss_feed.py
openbb_guru/standard_models/: house_disclosure.py  house_disclosure_rss_feed.py  senate_trading.py  senate_trading_rss_feed.py
tests/: test_fmp_fetchers.py
