[tool.poetry]
name = "guru"
version = "1.0.0"
description = "jinniuai's openbb extension to extend openbb-core and openbb-fmp with jinniuai's own router and provider"
authors = ["cheng qiu <qiucheng@jinniuai.com>"]
readme = "README.md"
packages = [{ include = "openbb_guru" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openbb-core = { version = ">=1.1.2" }
openbb-fmp = "^1.3.3"
openbb = "^4.3.3"
openbb-cli = "^1.1.3"

[tool.poetry.group.dev.dependencies]
openbb-devtools = "^1.3.1"
pytest = "<8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
guru = "openbb_guru.router:router"

[tool.poetry.plugins."openbb_provider_extension"]
guru = "openbb_guru.provider:provider"
